Refactor HTML, CSS, JS code

--- a/about-us.html
+++ b/about-us.html
@@ -20,14 +20,16 @@
       <div class="Info_container">
         <div class="info_list">
           <ul id="InfoList">
-            <li id="dropdown" class="dropdown"><a href="about-us.html" style="text-decoration: none; color: white;">ABOUT US</a><img class="dropdownAboutUs" src="images/dropdown_gray.png" alt="ABOUT US DROP DOWN"/>
-            <ul id="dropdown_content" class="dropdown_content">
-              <li>Who We are</li>
-              <li>Diversity</li>
-              <li>Social impact</li>
-            </ul>
+            <li id="dropdown" class="dropdown">
+              <a href="about-us.html" style="text-decoration: none; color: white;">ABOUT US</a><img class="dropdownAboutUs" src="images/dropdown_gray.png" alt="ABOUT US DROP DOWN" />
+              <ul id="dropdown_content" class="dropdown_content">
+                <li>Who We are</li>
+                <li>Diversity</li>
+                <li>Social impact</li>
+              </ul>
             </li>
-            <li id="dropdown" class="dropdown"><a href="news.html" style="text-decoration: none; color: white;">NEWS</a><img class="dropdownNewsUs" src="images/dropdown_gray.png" alt="NEWS DROP DOWN"/>
+            <li id="dropdown" class="dropdown">
+              <a href="news.html" style="text-decoration: none; color: white;">NEWS</a><img class="dropdownNewsUs" src="images/dropdown_gray.png" alt="NEWS DROP DOWN" />
               <ul id="dropdown_content" class="dropdown_content">
                 <li>Jobs</li>
                 <li>Benefits</li>
@@ -58,7 +60,7 @@
         </div>
         <div class="search_container">
           <input class="search_box" type="text" placeholder="SEARCH..." />
-          <img class="search_icon" src="images/white_search.png" alt="SEARCH ICON"/>
+          <img class="search_icon" src="images/white_search.png" alt="SEARCH ICON" />
         </div>
         <div class="signIn_container">
           <button id="signIn_button">SIGN IN</button>
@@ -162,7 +164,7 @@
               <img src="images/champion1.jpg" alt="League Champion1" width="600" height="600" />
             </div>
 
-            <div class="text-content"  >
+            <div class="text-content">
               <h3 style="font-weight: bold; font-size: 35px;">Diversity & Inclusion</h3>
               <div class="copy_prose">
                 <p style="line-height: 1.38; margin-top: 0; margin-bottom: 0;">
@@ -181,7 +183,6 @@
         </div>
         <div class="section5b-container" id="SocialImpact">
           <div class="flex-container">
-
             <div class="text-content">
               <h3 style="font-weight: bold; font-size: 35px;">Social Impact</h3>
               <div class="copy prose">
@@ -222,58 +223,56 @@
 
           <div class="whole_row_container">
             <div class="row_container" id="row_container">
+              <div class="row">
+                <div class="location-container">
+                  <div class="image-column">
+                    <img id="image1" src="images/dubai.jpg" alt="Dubai" width="300" height="150" />
+                  </div>
+                  <div class="info-column">
+                    <h3 id="h31" class="heading heading--5 heading--light">Dubai</h3>
+                    <p id="p1" class="heading heading--5 heading--light heading--muted">UAE</p>
+                  </div>
+                  <div class="open-positions-column">
+                    <span id="pos1">Open Positions:</span>
+                    <span id="open1" class="badge">3</span>
+                  </div>
+                </div>
+              </div>
 
-            <div class="row">
-              <div class="location-container">
-                <div class="image-column">
-                  <img id="image1" src="images/dubai.jpg" alt="Dubai" width="300" height="150" />
-                </div>
-                <div class="info-column">
-                  <h3 id="h31" class="heading heading--5 heading--light">Dubai</h3>
-                  <p id="p1" class="heading heading--5 heading--light heading--muted">UAE</p>
-                </div>
-                <div class="open-positions-column">
-                  <span id="pos1">Open Positions:</span>
-                  <span id="open1" class="badge">3</span>
-                </div>
-              </div>
-            </div>
-          
-            <div class="row">
-              <div class="location-container">
-                <div id="image2" class="image-column">
-                  <img id="image2" src="images/sydney.jpg" alt="Sydney" width="300" height="150" />
-                </div>
-                <div class="info-column">
-                  <h3 id="h32" class="heading heading--5 heading--light">Sydney</h3>
-                  <p id="p2" lass="heading heading--5 heading--light heading--muted">Australia</p>
-                </div>
-                <div class="open-positions-column">
-                  <span id="pos2">Open Positions:</span>
-                  <span id="open2" class="badge">2</span>
+              <div class="row">
+                <div class="location-container">
+                  <div id="image2" class="image-column">
+                    <img id="image2" src="images/sydney.jpg" alt="Sydney" width="300" height="150" />
+                  </div>
+                  <div class="info-column">
+                    <h3 id="h32" class="heading heading--5 heading--light">Sydney</h3>
+                    <p id="p2" lass="heading heading--5 heading--light heading--muted">Australia</p>
+                  </div>
+                  <div class="open-positions-column">
+                    <span id="pos2">Open Positions:</span>
+                    <span id="open2" class="badge">2</span>
+                  </div>
                 </div>
               </div>
-            </div>
-      
-            <div class="row">
-              <div class="location-container">
-                <div class="image-column">
-                  <img id="image3" src="images/singapore.jpg" alt="Singapore" width="300" height="150" />
-                </div>
-                <div class="info-column">
-                  <h3 id="h33" class="heading heading--5 heading--light">Singapore</h3>
-                  <p id="p3" class="heading heading--5 heading--light heading--muted">Singapore</p>
-                </div>
-                <div class="open-positions-column">
-                  <span id="pos3">Open Positions:</span>
-                  <span id="open3" class="badge">1</span>
-                </div>
-              </div>
-            </div>
-          </div>
-          </div>
-          </div>
 
+              <div class="row">
+                <div class="location-container">
+                  <div class="image-column">
+                    <img id="image3" src="images/singapore.jpg" alt="Singapore" width="300" height="150" />
+                  </div>
+                  <div class="info-column">
+                    <h3 id="h33" class="heading heading--5 heading--light">Singapore</h3>
+                    <p id="p3" class="heading heading--5 heading--light heading--muted">Singapore</p>
+                  </div>
+                  <div class="open-positions-column">
+                    <span id="pos3">Open Positions:</span>
+                    <span id="open3" class="badge">1</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <div class="text-with-cta text-center" id="WorkwithUs">
           <h2 style="font-size: 60px; font-weight: bold;">Work With Us</h2>
