--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
       <div class="Info_container">
         <div class="info_list">
           <ul id="InfoList">
-            <li id="dropdown" class="dropdown"><a href="about-us.html" style="text-decoration: none; color: white;">ABOUT US</a><img class="dropdownAboutUs" src="images/dropdown_gray.png" alt="ABOUT US DROP DOWN"/>
-            <ul id="dropdown_content" class="dropdown_content">
-              <li>Who We are</li>
-              <li>Diversity</li>
-              <li>Social impact</li>
-            </ul>
+            <li id="dropdown" class="dropdown">
+              <a href="about-us.html" style="text-decoration: none; color: white;">ABOUT US</a><img class="dropdownAboutUs" src="images/dropdown_gray.png" alt="ABOUT US DROP DOWN" />
+              <ul id="dropdown_content" class="dropdown_content">
+                <li>Who We are</li>
+                <li>Diversity</li>
+                <li>Social impact</li>
+              </ul>
             </li>
-            <li id="dropdown" class="dropdown"><a href="news.html" style="text-decoration: none; color: white;">NEWS</a><img class="dropdownNewsUs" src="images/dropdown_gray.png" alt="NEWS DROP DOWN"/>
+            <li id="dropdown" class="dropdown">
+              <a href="news.html" style="text-decoration: none; color: white;">NEWS</a><img class="dropdownNewsUs" src="images/dropdown_gray.png" alt="NEWS DROP DOWN" />
               <ul id="dropdown_content" class="dropdown_content">
                 <li>Jobs</li>
                 <li>Benefits</li>
@@ -57,7 +59,7 @@
         </div>
         <div class="search_container">
           <input class="search_box" type="text" placeholder="SEARCH..." />
-          <img class="search_icon" src="images/white_search.png" alt="SEARCH ICON"/>
+          <img class="search_icon" src="images/white_search.png" alt="SEARCH ICON" />
         </div>
         <div class="signIn_container">
           <button id="signIn_button">SIGN IN</button>
@@ -65,8 +67,8 @@
       </div>
     </div>
     <div class="hero_background" id="WORLDS2023">
-      <div class="world_text" >
-        <h1 >WORLDS 2023</h1>
+      <div class="world_text">
+        <h1>WORLDS 2023</h1>
       </div>
       <div class="h2_text">
         <h2>The Pinnacle of Esports Competition Is <span class="subtext">Back</span></h2>
@@ -162,7 +164,7 @@
       </div>
       <div class="esportsOption_container">
         <div class="esport1">
-          <img class="img_esport1bg" src="images/esport1.png" alt="LOL Esport Background"/>
+          <img class="img_esport1bg" src="images/esport1.png" alt="LOL Esport Background" />
           <img class="img_lolLogo" src="images/lol_esport.png" alt="LOL Esport Title" />
         </div>
         <div class="esport2">
@@ -173,8 +175,8 @@
     </div>
     <div class="RiotForge_mainContainer" id="RiotForge">
       <div class="nextback_arrows">
-        <div><img id="arrowLeft" class="arrowLeft" src="images/arrow_left.png" alt="Black Arrow Left"/></div>
-        <div><img id="arrowRight" class="arrowRight" src="images/arrow_right.png" alt="Black Arrow Right"/></div>
+        <div><img id="arrowLeft" class="arrowLeft" src="images/arrow_left.png" alt="Black Arrow Left" /></div>
+        <div><img id="arrowRight" class="arrowRight" src="images/arrow_right.png" alt="Black Arrow Right" /></div>
       </div>
       <div class="RiotForge_container">
         <h1 id="RiotForge">Riot Forge</h1>
