--- a/news.html
+++ b/news.html
@@ -20,14 +20,16 @@
       <div class="Info_container">
         <div class="info_list">
           <ul id="InfoList">
-            <li id="dropdown" class="dropdown"><a href="about-us.html" style="text-decoration: none; color: white;">ABOUT US</a><img class="dropdownAboutUs" src="images/dropdown_gray.png" alt="ABOUT US DROP DOWN"/>
-            <ul id="dropdown_content" class="dropdown_content">
-              <li>Who We are</li>
-              <li>Diversity</li>
-              <li>Social impact</li>
-            </ul>
+            <li id="dropdown" class="dropdown">
+              <a href="about-us.html" style="text-decoration: none; color: white;">ABOUT US</a><img class="dropdownAboutUs" src="images/dropdown_gray.png" alt="ABOUT US DROP DOWN" />
+              <ul id="dropdown_content" class="dropdown_content">
+                <li>Who We are</li>
+                <li>Diversity</li>
+                <li>Social impact</li>
+              </ul>
             </li>
-            <li id="dropdown" class="dropdown"><a href="news.html" style="text-decoration: none; color: white;">NEWS</a><img class="dropdownNewsUs" src="images/dropdown_gray.png" alt="NEWS DROP DOWN"/>
+            <li id="dropdown" class="dropdown">
+              <a href="news.html" style="text-decoration: none; color: white;">NEWS</a><img class="dropdownNewsUs" src="images/dropdown_gray.png" alt="NEWS DROP DOWN" />
               <ul id="dropdown_content" class="dropdown_content">
                 <li>Jobs</li>
                 <li>Benefits</li>
@@ -58,7 +60,7 @@
         </div>
         <div class="search_container">
           <input class="search_box" type="text" placeholder="SEARCH..." />
-          <img class="search_icon" src="images/white_search.png" alt="SEARCH ICON"/>
+          <img class="search_icon" src="images/white_search.png" alt="SEARCH ICON" />
         </div>
         <div class="signIn_container">
           <button id="signIn_button">SIGN IN</button>
@@ -69,12 +71,12 @@
     <div class="explore-hero__filter"></div>
     <div class="custom-box">
       <span id="showMe">Show Me </span>
-      <span id="everythingDefault">Everything</span> <span><img id="NewsDropdown" src="images/dropdown_gray.png" alt="NEWS DROPDOWN"/></span>
+      <span id="everythingDefault">Everything</span> <span><img id="NewsDropdown" src="images/dropdown_gray.png" alt="NEWS DROPDOWN" /></span>
       <div class="dropdown_option" id="options">
-        <div class="ximg"><img id="x_button" src="images/gray_x.png" alt="X"/></div>
-        <span id="filter" >Filter by:</span>
+        <div class="ximg"><img id="x_button" src="images/gray_x.png" alt="X" /></div>
+        <span id="filter">Filter by:</span>
         <ul>
-          <li id="everything">Everything</li> 
+          <li id="everything">Everything</li>
           <li id="offices">Offices</li>
           <li id="disciplines">Disciplines</li>
           <li id="news">News</li>
@@ -147,7 +149,7 @@
           <img src="images/summary pic1.png" alt="Image Description" />
         </div>
       </div>
-  
+
       <div class="custom-box-summary" id="custom-box-2">
         <div class="responsive-media-custom-boxes">
           <img src="images/summary pic2.png" alt="Image Description" />
@@ -222,7 +224,7 @@
           <img src="images/summary pic3.png" alt="Image Description" />
         </div>
       </div>
-  
+
       <div class="custom-box-summary" id="custom-box-4">
         <div class="responsive-media-custom-boxes">
           <img src="images/summary pic4.png" alt="Image Description" />
@@ -257,7 +259,7 @@
           </span>
         </div>
       </div>
-  
+
       <div class="custom-box-summary" id="custom-box-5">
         <div class="summary__content4 summary__content--padded">
           <div class="date-container4">
@@ -300,7 +302,7 @@
           <img src="images/summary pic5.png" alt="Image Description" />
         </div>
       </div>
-  
+
       <div class="custom-box-summary" id="custom-box-6">
         <div class="responsive-media-custom-boxes">
           <img src="images/summary pic6.png" alt="Image Description" />
@@ -340,7 +342,7 @@
           </span>
         </div>
       </div>
-  
+
       <div class="custom-box-summary" id="custom-box-7">
         <div class="summary__content6 summary__content--padded">
           <div class="date-container6">
@@ -380,7 +382,7 @@
           <img src="images/summary pic7.png" alt="Image Description" />
         </div>
       </div>
-  
+
       <div class="custom-box-summary" id="custom-box-8">
         <div class="responsive-media-custom-boxes">
           <img src="images/summary pic8.png" alt="Image Description" />
